[tool.poetry]
name = "gibsey_rag"
version = "0.1.0"
description = ""
authors = ["mbu09a <mbu09a@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
llama-index = "^0.12.34"
qdrant-client = "^1.14.2"
langchain = "^0.3.25"
haystack = "^0.42"
nomic = "^3.4.1"
fastapi = "^0.115.12"
uvicorn = "^0.34.2"
pytest = "^8.3.5"
rich = "^14.0.0"
python-dotenv = "^1.1.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
